feat(app): first post

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -5,3 +5,7 @@ alejandro_hermosilla:
 pool_rosales:
   name: Pool Rosales
   email: prosales@gmail.com
+
+joshua_provoste:
+  name: Joshua Provoste
+  email: joshua.provoste@e-virtus.com
