feat(app): add new posts

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -9,3 +9,11 @@ pool_rosales:
 joshua_provoste:
   name: Joshua Provoste
   email: joshua.provoste@e-virtus.com
+
+sebastian_yoma:
+  name: Sebastian Yoma
+  email: sebastian@e-virtus.com
+
+hector_norambuena:
+  name: Hector Norambuena
+  email: hector@e-virtus.com
