--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ markdown: kramdown
 
 # for atom feed
 author:
-  name: Sharad Raj Singh Maurya
-  email: dev_sharad@outlook.com
+  name: e-virtus
+  email: e-virtus@outlook.com
 
 plugins:
   - jemoji
