feat(blog): add href element <a>

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,19 +1,24 @@
 alejandro_hermosilla:
   name: Alejandro Hermosilla
   email: alehermosilla@gmail.com
+  linkedin: https://www.linkedin.com/in/alejandro-hermosilla-823075166/
 
 pool_rosales:
   name: Pool Rosales
   email: prosales@gmail.com
+  linkedin: https://www.linkedin.com/in/pool-alexis-rosales-castro-b5bb26180/
 
 joshua_provoste:
   name: Joshua Provoste
   email: joshua.provoste@e-virtus.com
+  linkedin: https://www.linkedin.com/in/joshuaprovoste/
 
 sebastian_yoma:
   name: Sebastian Yoma
   email: sebastian@e-virtus.com
+  linkedin: https://www.linkedin.com/in/syoma/
 
 hector_norambuena:
   name: Hector Norambuena
   email: hector@e-virtus.com
+  linkedin: https://www.linkedin.com/in/h%C3%A9ctor-norambuena-pe%C3%B1a-b2113744/
