feat(app): add new author, and post pentesting

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -18,7 +18,7 @@ sebastian_yoma:
   email: sebastian@e-virtus.com
   linkedin: https://www.linkedin.com/in/syoma/
 
-hector_norambuena:
-  name: Hector Norambuena
-  email: hector@e-virtus.com
-  linkedin: https://www.linkedin.com/in/h%C3%A9ctor-norambuena-pe%C3%B1a-b2113744/
+roberto_alfaro:
+  name: Roberto Alfaro
+  email: roberto.alfaro@e-virtus.com
+  linkedin: https://www.linkedin.com/in/roberto-alfaro-ibanez/
