feat(app): new article johan

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -22,3 +22,8 @@ roberto_alfaro:
   name: Roberto Alfaro
   email: roberto.alfaro@e-virtus.com
   linkedin: https://www.linkedin.com/in/roberto-alfaro-ibanez/
+
+johan_loor:
+  name: Johan Loor
+  email: consulting@e-virtus.com
+  linkedin: https://www.linkedin.com/company/e-virtus/
