feat(app):2025-04-25-Hackfinity_Battle_OSINT_post_Roberto_Alfaro

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -27,3 +27,8 @@ johan_loor:
   name: Johan Loor
   email: consulting@e-virtus.com
   linkedin: https://www.linkedin.com/company/e-virtus/
+
+carlos_vargas:
+  name: Carlos Vargas
+  email: carlos.vargas@e-virtus.com
+  linkedin: https://www.linkedin.com/in/carlos-vargas-quiero-b4292b19b/
